fixed descriptions for swagger
