# docs/swagger.json
@@ -24,7 +24,7 @@
                 "tags": [
                     "songs"
                 ],
-                "summary": "GetSongInfo",
+                "summary": "Get song detail",
                 "parameters": [
                     {
                         "type": "string",
@@ -45,7 +45,7 @@
                     "200": {
                         "description": "Song details",
                         "schema": {
-                            "$ref": "#/definitions/models.SongInfo"
+                            "$ref": "#/definitions/models.SongDetail"
                         }
                     },
                     "404": {
@@ -191,7 +191,7 @@
                 "tags": [
                     "songs"
                 ],
-                "summary": "addSong",
+                "summary": "Add song",
                 "parameters": [
                     {
                         "description": "Song info",
@@ -280,7 +280,7 @@
                     "200": {
                         "description": "Song lyrics successfully retrieved",
                         "schema": {
-                            "$ref": "#/definitions/get.Lyrics"
+                            "$ref": "#/definitions/models.Lyrics"
                         }
                     },
                     "400": {
@@ -359,11 +359,12 @@
         }
     },
     "definitions": {
-        "get.Lyrics": {
+        "models.Lyrics": {
             "type": "object",
             "properties": {
                 "text": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Ooh baby, don't you know..."
                 }
             }
         },
@@ -396,7 +397,7 @@
                 }
             }
         },
-        "models.SongInfo": {
+        "models.SongDetail": {
             "type": "object",
             "properties": {
                 "link": {
