# internal/models/song.go
@@ -1,6 +1,6 @@
 package models
 
-type SongInfo struct {
+type SongDetail struct {
 	ReleaseDate string `json:"release_date,omitempty" example:"16.07.2006"`
 	Text        string `json:"text,omitempty" example:"Ooh baby, don't you know I suffer?\\nOoh baby, canyou hear me moan?\\nYou caught me under false pretenses\\nHow long before you let me go?\\n\\nOoh\\nYou set my soul alight\\nOoh\\nYou set my soul alight"`
 	Link        string `json:"link,omitempty" example:"https://www.youtube.com/watch?v=Xsp3_a-PMTw"`
@@ -12,4 +12,8 @@ type Song struct {
 	ReleaseDate string `json:"release_date,omitempty" example:"16.07.2006"`
 	Text        string `json:"text,omitempty" example:"Ooh baby, don't you know..."`
 	Link        string `json:"link,omitempty" example:"https://www.youtube.com/watch?v=Xsp3_a-PMTw"`
+}
+
+type Lyrics struct {
+	Text string `json:"text,omitempty" example:"Ooh baby, don't you know..."`
 }
